[package]
name = "oppenheimer"
authors = ["Ithai Levi"]
description = "Hierarchical listboards for your terminal"
version = "0.3.5"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/rlofc/oppenheimer"
license-file = "./LICENSE"
readme = "./README.md"

[dependencies]
crossterm = "0.28.1"
markdown = "=1.0.0-alpha.22"
ratatui = "0.29.0"
textwrap = "0.16.1"

[profile.release-minified]
inherits = "release"
strip = true
opt-level= "z"
lto = true
